--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "@fransvilhelm/lambi",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "Run scripts in a lambda like env",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Adam Bergman <adam@fransvilhelm.com>",
   "repository": "https://github.com/adambrgmn/lambi.git",
   "license": "MIT",
-  "bin": "./dist/lambi.js",
+  "bin": "lambi.js",
   "files": [
     "dist",
     "dockerfiles"
+  ],
+  "keywords": [
+    "docker",
+    "lambda",
+    "cli"
   ],
   "scripts": {
     "dev": "parcel watch src/index.ts --target node",
