--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "execa": "^1.0.0",
     "listr": "^0.14.3",
+    "meow": "^5.0.0",
     "read-pkg-up": "^6.0.0",
     "which": "^1.3.1"
   },
