--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "execa": "^1.0.0",
     "listr": "^0.14.3",
+    "lodash": "^4.17.11",
     "meow": "^5.0.0",
     "read-pkg-up": "^6.0.0",
     "which": "^1.3.1"
@@ -34,6 +35,7 @@
     "@types/execa": "^0.9.0",
     "@types/jest": "^24.0.13",
     "@types/listr": "^0.14.0",
+    "@types/lodash": "^4.14.134",
     "@types/node": "^12.0.7",
     "@types/read-pkg-up": "^3.0.1",
     "@types/which": "^1.3.1",
